# TimelapsedHRpQCT

./: .gitignore  Example.ipynb  LICENSE  README.md  Remodelling_dev.ipynb  THIRD_PARTY_NOTICES.md  Untitled.ipynb  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml
conda-recipe/: meta.yaml
configs/: defaults.yml  example_multistack.yml  example_single_stack.yml
docs/: analysis.md  api_reference.md  defaults_annotated.md  index.md  installation.md  multistack_algorithm.md  settings.md  slicer_hrpqct_toolbox_roadmap.md  usage.md  usage_examples.md
scripts/: test_single_mask.py  timelapse
src/multistack_registration/: cli.py
src/multistack_registration/analysis/: __init__.py
src/multistack_registration/config/: loader.py
src/multistack_registration/dataset/: __init__.py  artifacts.py  derivative_paths.py  discovery.py  layout.py  models.py
src/multistack_registration/io/: aim.py  metadata.py
src/multistack_registration/processing/: analysis_io.py  contour_generation.py  filling_io.py  fused_outputs.py  fusion.py  import_outputs.py  qc.py  segmentation.py  stack_correction.py  stacks.py  superstack.py  timelapse_outputs.py  transform_chain.py
src/multistack_registration/qc/: figures.py  reporting.py
src/multistack_registration/utils/: logging.py  paths.py  sitk_helpers.py
src/multistack_registration/workflows/: analysis.py  apply_transforms.py  filling.py  generate_masks.py  import_aim.py  multistack_correction.py  timelapse_registration.py
src/timelapsedhrpqct/: __init__.py  cli.py
src/timelapsedhrpqct/analysis/: __init__.py  remodelling.py
src/timelapsedhrpqct/config/: loader.py  models.py  profiles.py
src/timelapsedhrpqct/configs/: defaults.yml
src/timelapsedhrpqct/dataset/: __init__.py  artifacts.py  derivative_paths.py  layout.py  (+4 more)
tests/: _pipeline_helpers.py  test_aim_io.py  test_aim_write.py  test_analysis_workflow.py  test_artifact_portability.py  test_cli_incremental_run.py  test_config_examples.py  test_config_profiles.py  test_contour_generation.py  test_crop_aims.py  test_derivative_paths.py  test_discovery.py  test_filling_algorithms.py  test_filling_io.py  test_fused_outputs.py  test_generate_data.py  test_generate_masks_workflow.py  test_import_alignment.py  test_import_outputs.py  test_io_image_helpers.py  test_io_metadata_helpers.py  test_ipl_resampling.py  test_legacy_migration.py  test_manufacturer_transforms.py  test_mask_selection.py  test_processing_helpers.py  test_qc_processing.py  test_registration_parameter_map.py  test_registration_qc_processing.py  test_scanco_transforms.py  test_slicer_toolbox_roadmap.py  test_stack_correction_components.py  test_superstack_processing.py  test_synthetic_minibone_integration.py  test_timelapse_outputs.py  test_timelapse_registration_masks.py  test_transform_chain.py  test_transform_registry.py  test_workflow_filling_light.py  test_workflow_pipeline.py
timelapsed_remodelling/: __init__.py  contour.py  example.py  logger.py  main.py  mechreg.py  motiongrade.py  register.py  remodell.py  reposition.py  timelapse.py  transform.py  visualise.py
timelapsed_remodelling/models/: DNN_0.h5  DNN_1.h5  DNN_2.h5  DNN_3.h5  DNN_4.h5  DNN_5.h5  DNN_6.h5  DNN_7.h5  DNN_8.h5  DNN_9.h5
timelapsed_remodelling/slice_browser/: Untitled.ipynb  _image_overlay.py  data_management.py  interactive_gui_elements.py  io.py
timelapsed_remodelling/slice_browser_2/: __init__.py  data_management.py  io.py
workflows/: ci.yml
(+51 files in other folders)
