[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timelapsed-hrpqct"
version = "2.0.7"
description = "Longitudinal HR-pQCT timelapse analysis workflow with multistack support"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{name = "Matthias Walle"}]
license = "AGPL-3.0-only"
dependencies = [
  "aimio-py; python_version < '3.14'",
  "numpy",
  "pandas",
  "itk-elastix",
  "PyYAML",
  "scikit-image",
  "scipy",
  "SimpleITK",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
]

[project.scripts]
timelapse = "timelapsedhrpqct.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
timelapsedhrpqct = ["configs/*.yml"]
