[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timelapsed-hrpqct"
version = "2.0.36"
description = "Longitudinal HR-pQCT timelapse analysis workflow with multistack support"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{name = "Matthias Walle"}]
license = "MIT"
dependencies = [
  "aimio-py; python_version < '3.14'",
  "numpy>=1.26,<2.0; python_version < '3.13'",
  "numpy>=2.1,<3.0; python_version >= '3.13'",
  "pandas",
  "itk-elastix",
  "hrpqct-geodesic-contour>=0.1.2",
  "PyYAML",
  "scikit-image>=0.24,<0.26",
  "scipy",
  "SimpleITK",
  "tifffile<2026",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
]

[project.scripts]
timelapse = "timelapsedhrpqct.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
timelapsedhrpqct = ["configs/*.yml", "configs/profiles/*.yml"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
